<?xml version="1.0"?>
<package format="3">
  <name>aruco_navigator</name>
  <version>0.0.1</version>
  <description>ArUco Tag Navigator for TurtleBot3</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
